--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@x1a0ma17x/zeppos-fx",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "description": "A library for providing simple animations in ZeppOS.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "directories": {
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -21,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/XiaomaiTX/zeppos-fx/issues"
   },
-  "homepage": "https://github.com/XiaomaiTX/zeppos-fx#readme"
+  "homepage": "https://github.com/XiaomaiTX/zeppos-fx#readme",
+  "devDependencies": {
+    "@types/node": "^25.0.3",
+    "@zeppos/device-types": "^3.0.1",
+    "typescript": "^5.9.3"
+  }
 }
