feat: add Jest testing framework with comprehensive test suite for Fx class Added Jest configuration, test files, and updated package.json scripts to enable unit testing and code coverage reporting. The .gitignore is updated to exclude coverage reports, and a new test file provides extensive coverage for the Fx class, including constructor, methods, static utilities, and animation styles. This ensures code reliability and maintainability by establishing a robust testing infrastructure.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "tsc",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build"
@@ -27,8 +28,11 @@
   },
   "homepage": "https://github.com/XiaomaiTX/zeppos-fx#readme",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@zeppos/device-types": "^3.0.1",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
   }
 }
